--- a/generate_learning_target.ipynb
+++ b/generate_learning_target.ipynb
@@ -17,9 +17,9 @@
    "outputs": [],
    "source": [
     "# Read the CSV file into a DataFrame\n",
-    "df_1 = pd.read_csv('learning_data/errors_fold1.csv')\n",
-    "df_2 = pd.read_csv('learning_data/errors_fold2.csv')\n",
-    "df_3 = pd.read_csv('learning_data/errors_total.csv')"
+    "df_1 = pd.read_csv('1.genome_learning_data/errors_fold1.csv')\n",
+    "df_2 = pd.read_csv('1.genome_learning_data/errors_fold2.csv')\n",
+    "df_3 = pd.read_csv('1.genome_learning_data/errors_total.csv')"
    ]
   },
   {
@@ -49,9 +49,9 @@
     "    rows_3.append([i, ((find_min_indices(df_3.iloc[i].to_numpy()[1:]) - 10)*0.5)[0], ((find_min_indices(df_3.iloc[i].to_numpy()[1:]) - 10)*0.5)[1]])\n",
     "\n",
     "column_names = [\"seqID\", \"small_end\", \"big_end\"]\n",
-    "pd.DataFrame(rows_1, columns=column_names).to_csv(\"learning_data/target_lambda_fold1.csv\", index=False)\n",
-    "pd.DataFrame(rows_2, columns=column_names).to_csv(\"learning_data/target_lambda_fold2.csv\", index=False)\n",
-    "pd.DataFrame(rows_3, columns=column_names).to_csv(\"learning_data/target_lambda_bothfold.csv\", index=False)"
+    "pd.DataFrame(rows_1, columns=column_names).to_csv(\"1.genome_learning_data/target_lambda_fold1.csv\", index=False)\n",
+    "pd.DataFrame(rows_2, columns=column_names).to_csv(\"1.genome_learning_data/target_lambda_fold2.csv\", index=False)\n",
+    "pd.DataFrame(rows_3, columns=column_names).to_csv(\"1.genome_learning_data/target_lambda_bothfold.csv\", index=False)"
    ]
   }
  ],
