--- a/lambda_learning_DeepLearning.ipynb
+++ b/lambda_learning_DeepLearning.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x2d2ffd2fcd0>"
+       "<torch._C.Generator at 0x27264cffcf0>"
       ]
      },
      "execution_count": 1,
@@ -20,6 +20,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
+    "from sklearn.model_selection import KFold\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, get_cumsum, error_count, write_to_csv, opart, SquaredHingeLoss\n",
@@ -48,12 +49,12 @@
    "outputs": [],
    "source": [
     "# data\n",
-    "chosen_feature = ['std_deviation', 'count', 'sum_diff']\n",
-    "data = torch.FloatTensor(pd.read_csv('learning_data/seq_features.csv').iloc[:, 1:][chosen_feature].to_numpy())\n",
-    "data = normalize_data(data)\n",
+    "chosen_feature = ['std_deviation', 'count', 'sum_diff', 'range_value', 'abs_skewness']\n",
+    "data = torch.FloatTensor(pd.read_csv('1.genome_learning_data/seq_features.csv').iloc[:, 1:][chosen_feature].to_numpy())\n",
+    "X = normalize_data(data)\n",
     "\n",
-    "target_df_1 = pd.read_csv('learning_data/target_lambda_fold1.csv')\n",
-    "target_df_2 = pd.read_csv('learning_data/target_lambda_fold2.csv')\n",
+    "target_df_1 = pd.read_csv('1.genome_learning_data/target_lambda_fold1.csv')\n",
+    "target_df_2 = pd.read_csv('1.genome_learning_data/target_lambda_fold2.csv')\n",
     "\n",
     "targets_low_1  = target_df_1.iloc[:, 1:2].to_numpy()\n",
     "targets_high_1 = target_df_1.iloc[:, 2:3].to_numpy()\n",
@@ -63,7 +64,10 @@
     "targets_low_1  = torch.FloatTensor(targets_low_1)\n",
     "targets_high_1 = torch.FloatTensor(targets_high_1)\n",
     "targets_low_2  = torch.FloatTensor(targets_low_2)\n",
-    "targets_high_2 = torch.FloatTensor(targets_high_2)"
+    "targets_high_2 = torch.FloatTensor(targets_high_2)\n",
+    "\n",
+    "y1 = torch.cat((targets_low_1, targets_high_1), dim=1)\n",
+    "y2 = torch.cat((targets_low_2, targets_high_2), dim=1)"
    ]
   },
   {
@@ -89,91 +93,197 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch     0, Loss_1:   1.2396, Loss_1_test:   1.6387, Loss_2:   1.8116, Loss_2_test:   1.4346\n",
-      "Epoch   100, Loss_1:   1.0846, Loss_1_test:   1.4331, Loss_2:   1.5040, Loss_2_test:   1.2265\n",
-      "Epoch   200, Loss_1:   1.0410, Loss_1_test:   1.3202, Loss_2:   1.3852, Loss_2_test:   1.2062\n",
-      "Epoch   300, Loss_1:   1.0247, Loss_1_test:   1.2953, Loss_2:   1.3280, Loss_2_test:   1.1782\n",
-      "Epoch   400, Loss_1:   1.0151, Loss_1_test:   1.3015, Loss_2:   1.2668, Loss_2_test:   1.1328\n",
-      "Epoch   500, Loss_1:   1.0125, Loss_1_test:   1.3071, Loss_2:   1.2239, Loss_2_test:   1.1104\n",
-      "Epoch   600, Loss_1:   1.0113, Loss_1_test:   1.3095, Loss_2:   1.2077, Loss_2_test:   1.1031\n",
-      "Epoch   700, Loss_1:   1.0102, Loss_1_test:   1.3128, Loss_2:   1.2019, Loss_2_test:   1.0994\n",
-      "Epoch   800, Loss_1:   1.0094, Loss_1_test:   1.3135, Loss_2:   1.1979, Loss_2_test:   1.0974\n",
-      "Epoch   900, Loss_1:   1.0087, Loss_1_test:   1.3133, Loss_2:   1.1945, Loss_2_test:   1.0982\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Instantiate the model, define custom loss function, and optimizer\n",
-    "model1 = MyModel(input_size = data.shape[1])\n",
-    "model2 = MyModel(input_size = data.shape[1])\n",
+    "# Cross-Validation number of iterations\n",
     "\n",
+    "# Define the number of folds for cross-validation\n",
+    "num_folds = 3\n",
+    "kf = KFold(n_splits=num_folds, shuffle=True, random_state=4)\n",
+    "\n",
+    "# loss function\n",
     "squared_hinge_loss = SquaredHingeLoss()\n",
-    "optimizer1 = optim.Adam(model1.parameters(), lr=0.001, amsgrad=True)\n",
-    "optimizer2 = optim.Adam(model2.parameters(), lr=0.001, amsgrad=True)\n",
     "\n",
-    "# Training loop\n",
-    "record_loss1_test = []\n",
-    "record_loss2_test = []\n",
-    "min_loss_1_test = float('inf')\n",
-    "min_loss_2_test = float('inf')\n",
-    "for epoch in range(1000):\n",
-    "    # Forward pass\n",
-    "    outputs1 = model1(data)\n",
-    "    outputs2 = model2(data)\n",
-    "    \n",
-    "    # Compute the custom loss\n",
-    "    loss_1 = squared_hinge_loss(outputs1, targets_low_1, targets_high_1)\n",
-    "    loss_2 = squared_hinge_loss(outputs2, targets_low_2, targets_high_2)\n",
-    "    loss_1_test = squared_hinge_loss(outputs1, targets_low_2, targets_high_2)\n",
-    "    loss_2_test = squared_hinge_loss(outputs2, targets_low_1, targets_high_1)\n",
-    "    \n",
-    "    # Backward pass and optimization\n",
-    "    optimizer1.zero_grad()\n",
-    "    loss_1.backward()\n",
-    "    optimizer1.step()\n",
+    "best_ites_1 = []\n",
+    "best_ites_2 = []\n",
+    "for train_index, val_index in kf.split(X):\n",
     "\n",
-    "    optimizer2.zero_grad()\n",
-    "    loss_2.backward()\n",
-    "    optimizer2.step()\n",
+    "    # Split the data into training and validation sets\n",
+    "    X_train_tensor, X_val_tensor   = X[train_index],  X[val_index]\n",
+    "    y1_train_tensor, y1_val_tensor = y1[train_index], y1[val_index]\n",
+    "    y2_train_tensor, y2_val_tensor = y2[train_index], y2[val_index]\n",
     "\n",
-    "    # record\n",
-    "    record_loss1_test.append(loss_1_test.item())\n",
-    "    record_loss2_test.append(loss_2_test.item())\n",
+    "    # Define your model, loss, and optimizer\n",
+    "    model1 = MyModel(input_size=X.shape[1])\n",
+    "    model2 = MyModel(input_size=X.shape[1])\n",
     "\n",
-    "    # save models\n",
-    "    if loss_1_test < min_loss_1_test:\n",
-    "        min_loss_1_test = loss_1_test\n",
-    "        torch.save(model1.state_dict(), 'saved_models/model1_dl_best.pth')\n",
+    "    optimizer1 = optim.Adam(model1.parameters(), lr=0.001, amsgrad=True)\n",
+    "    optimizer2 = optim.Adam(model2.parameters(), lr=0.001, amsgrad=True)\n",
+    "\n",
+    "    # Training loop for the specified number of iterations\n",
+    "    val_losses_1 = []\n",
+    "    val_losses_2 = []\n",
+    "    for epoch in range(1000):\n",
+    "        outputs1 = model1(X_train_tensor)\n",
+    "        outputs2 = model2(X_train_tensor)\n",
+    "\n",
+    "        loss1 = squared_hinge_loss(outputs1, y1_train_tensor)\n",
+    "        loss2 = squared_hinge_loss(outputs2, y2_train_tensor)\n",
+    "        \n",
+    "        optimizer1.zero_grad()\n",
+    "        optimizer2.zero_grad()\n",
+    "        \n",
+    "        loss1.backward()\n",
+    "        loss2.backward()\n",
+    "\n",
+    "        optimizer1.step()\n",
+    "        optimizer2.step()\n",
+    "\n",
+    "        # add val loss\n",
+    "        val_loss_1 = squared_hinge_loss(model1(X_val_tensor), y1_val_tensor)\n",
+    "        val_loss_2 = squared_hinge_loss(model2(X_val_tensor), y2_val_tensor)\n",
+    "\n",
+    "        val_losses_1.append(val_loss_1.item())\n",
+    "        val_losses_2.append(val_loss_2.item())\n",
     "    \n",
-    "    if loss_2_test < min_loss_2_test:\n",
-    "        min_loss_2_test = loss_2_test\n",
-    "        torch.save(model2.state_dict(), 'saved_models/model2_dl_best.pth')\n",
-    "    \n",
-    "    # Print the loss every 100 epochs\n",
-    "    if (epoch) % 100 == 0:\n",
-    "        print(f'Epoch {epoch:5d}, Loss_1: {loss_1.item():8.4f}, Loss_1_test: {loss_1_test.item():8.4f}, Loss_2: {loss_2.item():8.4f}, Loss_2_test: {loss_2_test.item():8.4f}')"
+    "    best_ite_1 = np.argmin(val_losses_1) + 1\n",
+    "    best_ite_2 = np.argmin(val_losses_2) + 1\n",
+    "\n",
+    "    best_ites_1.append(best_ite_1)\n",
+    "    best_ites_2.append(best_ite_2)\n",
+    "\n",
+    "best_no_ite_1 = int(np.mean(best_ites_1))\n",
+    "best_no_ite_2 = int(np.mean(best_ites_2))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train fold 1\n",
+    "model1 = MyModel(input_size = data.shape[1])\n",
+    "squared_hinge_loss = SquaredHingeLoss()\n",
+    "optimizer1 = optim.Adam(model1.parameters(), lr=0.001, amsgrad=True)\n",
+    "\n",
+    "# Training loop\n",
+    "for epoch in range(best_no_ite_1):\n",
+    "    # Forward pass\n",
+    "    outputs1 = model1(data)\n",
+    "    \n",
+    "    # Compute the custom loss\n",
+    "    loss_1 = squared_hinge_loss(outputs1, y1)\n",
+    "    \n",
+    "    # Backward pass and optimization\n",
+    "    optimizer1.zero_grad()\n",
+    "    loss_1.backward()\n",
+    "    optimizer1.step()\n",
+    "\n",
+    "# save model\n",
+    "torch.save(model1.state_dict(), '1.genome_saved_models/model1_dl_best.pth')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train fold 2\n",
+    "model2 = MyModel(input_size = data.shape[1])\n",
+    "squared_hinge_loss = SquaredHingeLoss()\n",
+    "optimizer2 = optim.Adam(model2.parameters(), lr=0.001, amsgrad=True)\n",
+    "\n",
+    "# Training loop\n",
+    "for epoch in range(best_no_ite_2):\n",
+    "    # Forward pass\n",
+    "    outputs2 = model2(data)\n",
+    "    \n",
+    "    # Compute the custom loss\n",
+    "    loss_2 = squared_hinge_loss(outputs2, y2)\n",
+    "    \n",
+    "    # Backward pass and optimization\n",
+    "    optimizer2.zero_grad()\n",
+    "    loss_2.backward()\n",
+    "    optimizer2.step()\n",
+    "\n",
+    "# save model\n",
+    "torch.save(model1.state_dict(), '1.genome_saved_models/model2_dl_best.pth')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Instantiate the model, define custom loss function, and optimizer\n",
+    "# model1 = MyModel(input_size = data.shape[1])\n",
+    "# model2 = MyModel(input_size = data.shape[1])\n",
+    "\n",
+    "# squared_hinge_loss = SquaredHingeLoss()\n",
+    "# optimizer1 = optim.Adam(model1.parameters(), lr=0.001, amsgrad=True)\n",
+    "# optimizer2 = optim.Adam(model2.parameters(), lr=0.001, amsgrad=True)\n",
+    "\n",
+    "# # Training loop\n",
+    "# record_loss1_test = []\n",
+    "# record_loss2_test = []\n",
+    "# min_loss_1_test = float('inf')\n",
+    "# min_loss_2_test = float('inf')\n",
+    "# for epoch in range(1000):\n",
+    "#     # Forward pass\n",
+    "#     outputs1 = model1(data)\n",
+    "#     outputs2 = model2(data)\n",
+    "    \n",
+    "#     # Compute the custom loss\n",
+    "#     loss_1 = squared_hinge_loss(outputs1, targets_low_1, targets_high_1)\n",
+    "#     loss_2 = squared_hinge_loss(outputs2, targets_low_2, targets_high_2)\n",
+    "#     loss_1_test = squared_hinge_loss(outputs1, targets_low_2, targets_high_2)\n",
+    "#     loss_2_test = squared_hinge_loss(outputs2, targets_low_1, targets_high_1)\n",
+    "    \n",
+    "#     # Backward pass and optimization\n",
+    "#     optimizer1.zero_grad()\n",
+    "#     loss_1.backward()\n",
+    "#     optimizer1.step()\n",
+    "\n",
+    "#     optimizer2.zero_grad()\n",
+    "#     loss_2.backward()\n",
+    "#     optimizer2.step()\n",
+    "\n",
+    "#     # record\n",
+    "#     record_loss1_test.append(loss_1_test.item())\n",
+    "#     record_loss2_test.append(loss_2_test.item())\n",
+    "\n",
+    "#     # save models\n",
+    "#     if loss_1_test < min_loss_1_test:\n",
+    "#         min_loss_1_test = loss_1_test\n",
+    "#         torch.save(model1.state_dict(), '1.genome_saved_models/model1_dl_best.pth')\n",
+    "    \n",
+    "#     if loss_2_test < min_loss_2_test:\n",
+    "#         min_loss_2_test = loss_2_test\n",
+    "#         torch.save(model2.state_dict(), '1.genome_saved_models/model2_dl_best.pth')\n",
+    "    \n",
+    "#     # Print the loss every 100 epochs\n",
+    "#     if (epoch) % 100 == 0:\n",
+    "#         print(f'Epoch {epoch:5d}, Loss_1: {loss_1.item():8.4f}, Loss_1_test: {loss_1_test.item():8.4f}, Loss_2: {loss_2.item():8.4f}, Loss_2_test: {loss_2_test.item():8.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "MyModel(\n",
-       "  (fc1): Linear(in_features=3, out_features=8, bias=True)\n",
+       "  (fc1): Linear(in_features=5, out_features=8, bias=True)\n",
        "  (fc2): Linear(in_features=8, out_features=1, bias=True)\n",
        ")"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,37 +291,37 @@
    "source": [
     "# Load model1\n",
     "model1 = MyModel(input_size=data.shape[1])\n",
-    "model1.load_state_dict(torch.load('saved_models/model1_dl_best.pth'))\n",
+    "model1.load_state_dict(torch.load('1.genome_saved_models/model1_dl_best.pth'))\n",
     "model1.eval()  # Set the model to evaluation mode\n",
     "\n",
     "# Load model2\n",
     "model2 = MyModel(input_size=data.shape[1])\n",
-    "model2.load_state_dict(torch.load('saved_models/model2_dl_best.pth'))\n",
+    "model2.load_state_dict(torch.load('1.genome_saved_models/model2_dl_best.pth'))\n",
     "model2.eval()  # Set the model to evaluation mode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss for fold 2:  1.2906907796859741\n",
-      "loss for fold 1:  1.0973103046417236\n"
+      "loss for fold 1:  1.032637119293213\n",
+      "loss for fold 2:  1.0122628211975098\n"
      ]
     }
    ],
    "source": [
-    "print(\"loss for fold 2: \",squared_hinge_loss(model1(data), targets_low_2, targets_high_2).item())\n",
-    "print(\"loss for fold 1: \",squared_hinge_loss(model2(data), targets_low_1, targets_high_1).item())"
+    "print(\"loss for fold 1: \",squared_hinge_loss(model2(data), y1).item())\n",
+    "print(\"loss for fold 2: \",squared_hinge_loss(model1(data), y2).item())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,12 +332,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "seqs   = gen_data_dict('sequence_label_data/signals.gz')\n",
-    "labels = gen_data_dict('sequence_label_data/labels.gz')\n",
+    "seqs   = gen_data_dict('sequence_label_data/genome/signals.gz')\n",
+    "labels = gen_data_dict('sequence_label_data/genome/labels.gz')\n",
     "\n",
     "header = ['sequenceID', 'fold_1_total_labels', 'fold_2_total_labels', 'fold_1_errs', 'fold_2_errs']\n",
     "\n",
@@ -255,7 +365,7 @@
     "    row.append(sum(err_1))\n",
     "    row.append(sum(err_2))\n",
     "\n",
-    "    write_to_csv('learning_output/deep.csv', header, row)"
+    "    write_to_csv('1.genome_learning_output/deep.csv', header, row)"
    ]
   }
  ],
