--- a/lambda_learning_RNN.ipynb
+++ b/lambda_learning_RNN.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x21e7f0afcd0>"
+       "<torch._C.Generator at 0x195e12afcf0>"
       ]
      },
      "execution_count": 1,
@@ -20,9 +20,10 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
+    "from sklearn.model_selection import KFold\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, get_cumsum, L, trace_back, error_count, write_to_csv, opart\n",
+    "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, get_cumsum, error_count, write_to_csv, opart, SquaredHingeLoss\n",
     "\n",
     "np.random.seed(4)\n",
     "torch.manual_seed(4)"
@@ -34,28 +35,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Custom loss function\n",
-    "margin = 1\n",
-    "class SquaredHingeLoss(nn.Module):\n",
-    "    def forward(self, predicted, low, high):\n",
-    "        low  = low + margin\n",
-    "        high = high - margin\n",
-    "        loss = torch.relu(low - predicted) + torch.relu(predicted - high)\n",
-    "        return torch.mean(torch.square(loss), dtype=torch.float)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# sequences\n",
-    "seqs = gen_data_dict('sequence_label_data/signals.gz')\n",
+    "seqs = gen_data_dict('sequence_label_data/genome/signals.gz')\n",
     "\n",
     "# target \n",
-    "target_df_1 = pd.read_csv('learning_data/target_lambda_fold1.csv')\n",
-    "target_df_2 = pd.read_csv('learning_data/target_lambda_fold2.csv')\n",
+    "target_df_1 = pd.read_csv('1.genome_learning_data/target_lambda_fold1.csv')\n",
+    "target_df_2 = pd.read_csv('1.genome_learning_data/target_lambda_fold2.csv')\n",
     "\n",
     "targets_low_1  = target_df_1.iloc[:, 1:2].to_numpy()\n",
     "targets_high_1 = target_df_1.iloc[:, 2:3].to_numpy()\n",
@@ -65,12 +50,15 @@
     "targets_low_1  = torch.FloatTensor(targets_low_1)\n",
     "targets_high_1 = torch.FloatTensor(targets_high_1)\n",
     "targets_low_2  = torch.FloatTensor(targets_low_2)\n",
-    "targets_high_2 = torch.FloatTensor(targets_high_2)"
+    "targets_high_2 = torch.FloatTensor(targets_high_2)\n",
+    "\n",
+    "y1 = torch.cat((targets_low_1, targets_high_1), dim=1)\n",
+    "y2 = torch.cat((targets_low_2, targets_high_2), dim=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,10 +104,10 @@
     "        outputs2 += model2(seq)\n",
     "    \n",
     "    # Compute the custom loss\n",
-    "    loss_1 = squared_hinge_loss(outputs1, targets_low_1, targets_high_1)\n",
-    "    loss_2 = squared_hinge_loss(outputs2, targets_low_2, targets_high_2)\n",
-    "    loss_1_test = squared_hinge_loss(outputs1, targets_low_2, targets_high_2)\n",
-    "    loss_2_test = squared_hinge_loss(outputs2, targets_low_1, targets_high_1)\n",
+    "    loss_1 = squared_hinge_loss(outputs1, y1)\n",
+    "    loss_2 = squared_hinge_loss(outputs2, y2)\n",
+    "    loss_1_test = squared_hinge_loss(outputs1, y2)\n",
+    "    loss_2_test = squared_hinge_loss(outputs2, y1)\n",
     "    \n",
     "    # Backward pass and optimization\n",
     "    optimizer1.zero_grad()\n",
@@ -137,11 +125,11 @@
     "    # save models\n",
     "    if loss_1_test < min_loss_1_test:\n",
     "        min_loss_1_test = loss_1_test\n",
-    "        torch.save(model1.state_dict(), 'saved_models/model1_rnn_best.pth')\n",
+    "        torch.save(model1.state_dict(), '1.genome_saved_models/model1_rnn_best.pth')\n",
     "    \n",
     "    if loss_2_test < min_loss_2_test:\n",
     "        min_loss_2_test = loss_2_test\n",
-    "        torch.save(model2.state_dict(), 'saved_models/model2_rnn_best.pth')\n",
+    "        torch.save(model2.state_dict(), '1.genome_saved_models/model2_rnn_best.pth')\n",
     "    \n",
     "    # Print the loss every 100 epochs\n",
     "    if (epoch) % 1 == 0:\n",
@@ -150,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +150,7 @@
        ")"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,18 +158,18 @@
    "source": [
     "# Load model1\n",
     "model1 = RNNModel()\n",
-    "model1.load_state_dict(torch.load('saved_models/model1_rnn_best.pth'))\n",
+    "model1.load_state_dict(torch.load('1.genome_saved_models/model1_rnn_best.pth'))\n",
     "model1.eval()  # Set the model to evaluation mode\n",
     "\n",
     "# Load model2\n",
     "model2 = RNNModel()\n",
-    "model2.load_state_dict(torch.load('saved_models/model2_rnn_best.pth'))\n",
+    "model2.load_state_dict(torch.load('1.genome_saved_models/model2_rnn_best.pth'))\n",
     "model2.eval()  # Set the model to evaluation mode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,12 +184,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "seqs   = gen_data_dict('sequence_label_data/signals.gz')\n",
-    "labels = gen_data_dict('sequence_label_data/labels.gz')\n",
+    "seqs   = gen_data_dict('sequence_label_data/genome/signals.gz')\n",
+    "labels = gen_data_dict('sequence_label_data/genome/labels.gz')\n",
     "\n",
     "header = ['sequenceID', 'fold_1_total_labels', 'fold_2_total_labels', 'fold_1_errs', 'fold_2_errs']\n",
     "\n",
@@ -229,7 +217,7 @@
     "    row.append(sum(err_1))\n",
     "    row.append(sum(err_2))\n",
     "\n",
-    "    write_to_csv('learning_output/rnn.csv', header, row)"
+    "    write_to_csv('1.genome_learning_output/rnn.csv', header, row)"
    ]
   }
  ],
