--- a/lambda_learning_linear.ipynb
+++ b/lambda_learning_linear.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x1f07eeb3c10>"
+       "<torch._C.Generator at 0x299f9aafcf0>"
       ]
      },
      "execution_count": 1,
@@ -35,12 +35,12 @@
    "outputs": [],
    "source": [
     "# data\n",
-    "data = pd.read_csv('learning_data/seq_features.csv')['count'].to_numpy()\n",
+    "data = pd.read_csv('1.genome_learning_data/seq_features.csv')['count'].to_numpy()\n",
     "data = np.log(np.log(data)).reshape(-1,1)\n",
     "data = torch.FloatTensor(data)\n",
     "\n",
-    "target_df_1 = pd.read_csv('learning_data/target_lambda_fold1.csv')\n",
-    "target_df_2 = pd.read_csv('learning_data/target_lambda_fold2.csv')\n",
+    "target_df_1 = pd.read_csv('1.genome_learning_data/target_lambda_fold1.csv')\n",
+    "target_df_2 = pd.read_csv('1.genome_learning_data/target_lambda_fold2.csv')\n",
     "\n",
     "targets_low_1  = target_df_1.iloc[:, 1:2].to_numpy()\n",
     "targets_high_1 = target_df_1.iloc[:, 2:3].to_numpy()\n",
@@ -50,7 +50,10 @@
     "targets_low_1  = torch.FloatTensor(targets_low_1)\n",
     "targets_high_1 = torch.FloatTensor(targets_high_1)\n",
     "targets_low_2  = torch.FloatTensor(targets_low_2)\n",
-    "targets_high_2 = torch.FloatTensor(targets_high_2)"
+    "targets_high_2 = torch.FloatTensor(targets_high_2)\n",
+    "\n",
+    "y1 = torch.cat((targets_low_1, targets_high_1), dim=1)\n",
+    "y2 = torch.cat((targets_low_2, targets_high_2), dim=1)"
    ]
   },
   {
@@ -73,25 +76,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [    0/5000], Loss_1:   2.4550, Loss_1_test:   2.2277, Loss_2:   1.9890, Loss_2_test:   2.1132\n",
-      "Epoch [  500/5000], Loss_1:   1.1537, Loss_1_test:   1.5936, Loss_2:   1.4097, Loss_2_test:   1.1994\n",
-      "Epoch [ 1000/5000], Loss_1:   1.1146, Loss_1_test:   1.5216, Loss_2:   1.3405, Loss_2_test:   1.1347\n",
-      "Epoch [ 1500/5000], Loss_1:   1.0817, Loss_1_test:   1.4872, Loss_2:   1.3321, Loss_2_test:   1.1509\n",
-      "Epoch [ 2000/5000], Loss_1:   1.0690, Loss_1_test:   1.4842, Loss_2:   1.3317, Loss_2_test:   1.1593\n",
-      "Epoch [ 2500/5000], Loss_1:   1.0659, Loss_1_test:   1.4835, Loss_2:   1.3318, Loss_2_test:   1.1595\n",
-      "Epoch [ 3000/5000], Loss_1:   1.0653, Loss_1_test:   1.4809, Loss_2:   1.3318, Loss_2_test:   1.1587\n",
-      "Epoch [ 3500/5000], Loss_1:   1.0653, Loss_1_test:   1.4820, Loss_2:   1.3318, Loss_2_test:   1.1619\n",
-      "Epoch [ 4000/5000], Loss_1:   1.0653, Loss_1_test:   1.4820, Loss_2:   1.3318, Loss_2_test:   1.1578\n",
-      "Epoch [ 4500/5000], Loss_1:   1.0653, Loss_1_test:   1.4820, Loss_2:   1.3318, Loss_2_test:   1.1625\n",
-      "Epoch [ 5000/5000], Loss_1:   1.0653, Loss_1_test:   1.4820, Loss_2:   1.3318, Loss_2_test:   1.1580\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Instantiate the model, define custom loss function, and optimizer\n",
     "model1 = LinearModel(input_size = 1)\n",
@@ -102,22 +87,16 @@
     "optimizer2 = optim.Adam(model2.parameters(), lr=0.01, amsgrad=True)\n",
     "\n",
     "# Training loop\n",
-    "record_loss1_test = []\n",
-    "record_loss2_test = []\n",
-    "min_loss_1_test = float('inf')\n",
-    "min_loss_2_test = float('inf')\n",
-    "\n",
-    "epochs = 5000\n",
-    "for epoch in range(epochs+1):\n",
+    "for epoch in range(5000):\n",
     "    # Forward pass\n",
     "    outputs1 = model1(data)\n",
     "    outputs2 = model2(data)\n",
     "    \n",
     "    # Compute the custom loss\n",
-    "    loss_1 = squared_hinge_loss(outputs1, targets_low_1, targets_high_1)\n",
-    "    loss_2 = squared_hinge_loss(outputs2, targets_low_2, targets_high_2)\n",
-    "    loss_1_test = squared_hinge_loss(outputs1, targets_low_2, targets_high_2)\n",
-    "    loss_2_test = squared_hinge_loss(outputs2, targets_low_1, targets_high_1)\n",
+    "    loss_1 = squared_hinge_loss(outputs1, y1)\n",
+    "    loss_2 = squared_hinge_loss(outputs2, y2)\n",
+    "    # loss_1_test = squared_hinge_loss(outputs1, targets_low_2, targets_high_2)\n",
+    "    # loss_2_test = squared_hinge_loss(outputs2, targets_low_1, targets_high_1)\n",
     "    \n",
     "    # Backward pass and optimization\n",
     "    optimizer1.zero_grad()\n",
@@ -128,27 +107,37 @@
     "    loss_2.backward()\n",
     "    optimizer2.step()\n",
     "\n",
-    "    # record\n",
-    "    record_loss1_test.append(loss_1_test.item())\n",
-    "    record_loss2_test.append(loss_2_test.item())\n",
+    "    # # record\n",
+    "    # record_loss1_test.append(loss_1_test.item())\n",
+    "    # record_loss2_test.append(loss_2_test.item())\n",
     "\n",
-    "    # save models\n",
-    "    if loss_1_test < min_loss_1_test:\n",
-    "        min_loss_1_test = loss_1_test\n",
-    "        torch.save(model1.state_dict(), 'saved_models/model1_linear_best.pth')\n",
+    "    # # save models\n",
+    "    # if loss_1_test < min_loss_1_test:\n",
+    "    #     min_loss_1_test = loss_1_test\n",
+    "    #     torch.save(model1.state_dict(), 'saved_models/model1_linear_best.pth')\n",
     "    \n",
-    "    if loss_2_test < min_loss_2_test:\n",
-    "        min_loss_2_test = loss_2_test\n",
-    "        torch.save(model2.state_dict(), 'saved_models/model2_linear_best.pth')\n",
+    "    # if loss_2_test < min_loss_2_test:\n",
+    "    #     min_loss_2_test = loss_2_test\n",
+    "    #     torch.save(model2.state_dict(), 'saved_models/model2_linear_best.pth')\n",
     "    \n",
-    "    # Print the loss every 100 epochs\n",
-    "    if (epoch) % 500 == 0:\n",
-    "        print(f'Epoch [{epoch:5d}/{epochs}], Loss_1: {loss_1.item():8.4f}, Loss_1_test: {loss_1_test.item():8.4f}, Loss_2: {loss_2.item():8.4f}, Loss_2_test: {loss_2_test.item():8.4f}')"
+    "    # # Print the loss every 100 epochs\n",
+    "    # if (epoch) % 500 == 0:\n",
+    "    #     print(f'Epoch [{epoch:5d}/{epochs}], Loss_1: {loss_1.item():8.4f}, Loss_1_test: {loss_1_test.item():8.4f}, Loss_2: {loss_2.item():8.4f}, Loss_2_test: {loss_2_test.item():8.4f}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model1.state_dict(), '1.genome_saved_models/model1_linear_best.pth')\n",
+    "torch.save(model2.state_dict(), '1.genome_saved_models/model2_linear_best.pth')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +148,7 @@
        ")"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,18 +156,18 @@
    "source": [
     "# Load model1\n",
     "model1 = LinearModel(input_size=1)\n",
-    "model1.load_state_dict(torch.load('saved_models/model1_linear_best.pth'))\n",
+    "model1.load_state_dict(torch.load('1.genome_saved_models/model1_linear_best.pth'))\n",
     "model1.eval()  # Set the model to evaluation mode\n",
     "\n",
     "# Load model2\n",
     "model2 = LinearModel(input_size=1)\n",
-    "model2.load_state_dict(torch.load('saved_models/model2_linear_best.pth'))\n",
+    "model2.load_state_dict(torch.load('1.genome_saved_models/model2_linear_best.pth'))\n",
     "model2.eval()  # Set the model to evaluation mode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,12 +178,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "seqs   = gen_data_dict('sequence_label_data/signals.gz')\n",
-    "labels = gen_data_dict('sequence_label_data/labels.gz')\n",
+    "seqs   = gen_data_dict('sequence_label_data/genome/signals.gz')\n",
+    "labels = gen_data_dict('sequence_label_data/genome/labels.gz')\n",
     "\n",
     "header = ['sequenceID', 'fold_1_total_labels', 'fold_2_total_labels', 'fold_1_errs', 'fold_2_errs']\n",
     "\n",
@@ -222,7 +211,7 @@
     "    row.append(sum(err_1))\n",
     "    row.append(sum(err_2))\n",
     "\n",
-    "    write_to_csv('learning_output/linear.csv', header, row)"
+    "    write_to_csv('1.genome_learning_output/linear.csv', header, row)"
    ]
   }
  ],
