--- a/utility_functions.ipynb
+++ b/utility_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,6 +195,7 @@
     "    return count\n",
     "\n",
     "def error_count(chpnt, neg_start, neg_end, pos_start, pos_end):\n",
+    "    chpnt = chpnt[1:-1]\n",
     "    fp_count, fn_count = 0, 0                           # initizlize false positive and false negative\n",
     "\n",
     "    for s, e in zip(neg_start, neg_end):\n",
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,12 +487,43 @@
     "import torch.nn as nn\n",
     "\n",
     "class SquaredHingeLoss(nn.Module):\n",
-    "    def forward(self, predicted, low, high):\n",
+    "    def forward(self, predicted, y):\n",
+    "        low, high = y[:,0], y[:,1]\n",
     "        margin = 1\n",
     "        loss_low  = torch.relu(low  - predicted + margin)*torch.sign(low + 5)\n",
     "        loss_high = torch.relu(predicted - high + margin)*torch.sign(5 - high)\n",
     "        loss = loss_low + loss_high\n",
     "        return torch.mean(torch.square(loss), dtype=torch.float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# seqs   = gen_data_dict('sequence_label_data/genome/signals.gz')\n",
+    "# labels = gen_data_dict('sequence_label_data/genome/labels.gz')\n",
+    "\n",
+    "# # test\n",
+    "# seq_id = 90\n",
+    "# sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, neg_start_2, neg_end_2, pos_start_2, pos_end_2 = get_data(seq_id, seqs, labels)\n",
+    "# chpnt = opart(lda=1, sequence=sequence)\n",
+    "# err1 = error_count(chpnt, neg_start_1, neg_end_1, pos_start_1, pos_end_1)\n",
+    "# err2 = error_count(chpnt, neg_start_2, neg_end_2, pos_start_2, pos_end_2)\n",
+    "\n",
+    "# print(\"sequence:    \", sequence[0:5])\n",
+    "# print(\"neg start 1: \", neg_start_1)\n",
+    "# print(\"neg end 1    \", neg_end_1)\n",
+    "# print(\"pos start 1: \", pos_start_1)\n",
+    "# print(\"pos end 1:   \", pos_end_1)\n",
+    "# print(\"neg start 2: \", neg_start_2)\n",
+    "# print(\"neg end 2    \", neg_end_2)\n",
+    "# print(\"pos start 2: \", pos_start_2)\n",
+    "# print(\"pos end 2:   \", pos_end_2)\n",
+    "# print(\"chpnt:\", chpnt)\n",
+    "# print(\"err1:\", err1)\n",
+    "# print(\"err2:\", err2)"
    ]
   }
  ],
