--- a/OPART.ipynb
+++ b/OPART.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,15 +13,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def try_lambda(i):\n",
     "    lda = ldas[i]\n",
     "    chpnt = opart(lda, sequence)\n",
-    "    err_1 = error_count(chpnt, neg_start_1, neg_end_1, pos_start_1, pos_end_1)\n",
-    "    err_2 = error_count(chpnt, neg_start_2, neg_end_2, pos_start_2, pos_end_2)\n",
+    "    err_1 = error_count(chpnt, neg_start_1, neg_end_1, pos_start_1, pos_end_1)[:2]\n",
+    "    err_2 = error_count(chpnt, neg_start_2, neg_end_2, pos_start_2, pos_end_2)[:2]\n",
     "    return err_1, err_2\n",
     "    \n",
     "if __name__ == \"__main__\":\n",
@@ -37,7 +37,7 @@
     "        sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, neg_start_2, neg_end_2, pos_start_2, pos_end_2 = get_data(i, seqs=seqs, labels=labels)\n",
     "\n",
     "        # run each lambda and record it into csv file\n",
-    "        row  = [i]\n",
+    "        row  = [seqs[i][0]]\n",
     "        errs = Parallel(n_jobs=32)(delayed(try_lambda)(i) for i in range(0, 21))\n",
     "        row += errs\n",
     "\n",
