--- a/0_Try/lambda_learning_BIC.ipynb
+++ b/0_Try/lambda_learning_BIC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,22 +12,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, get_cumsum, error_count, write_to_csv, opart"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "seqs   = gen_data_dict('sequence_label_data/genome/signals.gz')\n",
-    "labels = gen_data_dict('sequence_label_data/genome/labels.gz')\n",
+    "seqs   = gen_data_dict('../sequence_label_data/genome/signals.gz')\n",
+    "labels = gen_data_dict('../sequence_label_data/genome/labels.gz')\n",
     "\n",
     "header = ['sequenceID', \"log_lambda\", 'fold_1_total_labels', 'fold_2_total_labels', 'fold_1_fp_errs', 'fold_1_fn_errs', 'fold_1_tp', 'fold_1_tn', 'fold_2_fp_errs', 'fold_2_fn_errs', 'fold_2_tp', 'fold_2_tn',]\n",
     "# header = ['sequenceID', 'fold_1_total_labels', 'fold_2_total_labels', 'fold_1_errs', 'fold_2_errs']\n",
@@ -63,7 +64,44 @@
     "    # row.append(sum(err_1))\n",
     "    # row.append(sum(err_2))\n",
     "\n",
-    "    write_to_csv('1.genome_learning_output/BIC_details.csv', header, row)"
+    "    write_to_csv('BIC_1.csv', header, row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "method:  BIC \t fold1.test: 70.35 \t fold2.test: 50.00 \t total_label_fold1: 752 \t total_label_fold2: 520 \t total_test_error_fold1: 223 \t total_test_error_fold2: 260\n"
+     ]
+    }
+   ],
+   "source": [
+    "BIC_df    = pd.read_csv('BIC_1.csv')\n",
+    "rate1_list = []\n",
+    "rate2_list = []\n",
+    "for df in [BIC_df]:\n",
+    "    if(df is BIC_df):\n",
+    "        method = \"BIC\"\n",
+    "\n",
+    "    fold1_total_errs = df['fold_1_fp_errs'].sum() + df['fold_1_fn_errs'].sum()\n",
+    "    fold2_total_errs = df['fold_2_fp_errs'].sum() + df['fold_2_fn_errs'].sum()\n",
+    "\n",
+    "    fold1_total_labels = df['fold_1_total_labels'].sum()\n",
+    "    fold2_total_labels = df['fold_2_total_labels'].sum()\n",
+    "\n",
+    "    rate1 = (fold1_total_labels - fold1_total_errs)/fold1_total_labels\n",
+    "    rate2 = (fold2_total_labels - fold2_total_errs)/fold2_total_labels\n",
+    "\n",
+    "    rate1_list.append(round(100*rate1, 2))\n",
+    "    rate2_list.append(round(100*rate2, 2))\n",
+    "\n",
+    "    print(\"method: %4s \\t fold1.test: %5.2f \\t fold2.test: %5.2f \\t total_label_fold1: %3d \\t total_label_fold2: %3d \\t total_test_error_fold1: %3d \\t total_test_error_fold2: %3d\" \n",
+    "          % (method, 100*rate1, 100*rate2, fold1_total_labels, fold2_total_labels, fold1_total_errs, fold2_total_errs))"
    ]
   }
  ],
